--- a/cowsay/Dockerfile
+++ b/cowsay/Dockerfile
@@ -1,4 +1,5 @@
 FROM debian:latest
+MAINTAINER Dmitriy Strelnikov <dm.strelnikov@yandex.ru>
 RUN apt-get update && apt-get install -y cowsay fortune
 ENTRYPOINT ["/usr/games/cowsay"]
 COPY entrypoint.sh /
